--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "prime-solo-project",
+  "name": "everett-portfolio",
   "version": "1.0.0",
   "private": true,
   "engines": {
     "node": "18.x"
   },
   "dependencies": {
-    "axios": "^1.6.2",
+    "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "cookie-session": "^2.0.0",
     "dotenv": "^16.0.3",
