--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
+    "gh": "^2.8.9",
+    "gh-pages": "^6.1.1",
     "nodemon": "^2.0.4",
     "vite": "^5.0.7",
     "vitest": "^1.0.4"
