--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
         with:
           node-version: 20
           cache: 'npm'
-          cache-dependency-path: subdir/package-lock.json
+          cache-dependency-path: 'subdir/package-lock.json'
       - name: Install dependencies
         run: npm ci
       - name: Build
