--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,6 @@ jobs:
         with:
           node-version: 20
           cache: 'npm'
-          cache-dependency-path: 'subdir/package-lock.json'
       - name: Install dependencies
         run: npm ci
       - name: Build
@@ -46,7 +45,7 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           # Upload dist folder
-          path: './dist'
+          path: './build'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
